*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8751 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -33,7 +33,7 @@ foxtrick.AttVsDef.oldstyle.desc=gammel stil
 foxtrick.AttVsDef.newstyle.desc=ny stil
 foxtrick.AttVsDef.oldstyleifkseparated.desc=gamle stil (adskilt ind. dødbolde)
 #Ratings
-foxtrick.Ratings.desc=Tilføjer ratings til kampen siden
+foxtrick.Ratings.desc=Tilføjer ratings til kamp siden
 foxtrick.Ratings.HideAverages.desc=Skjule gennemsnitlige bedømmelser
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaljeret)
@@ -43,7 +43,7 @@ foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
-foxtrick.BookmarkAdjust.desc=Skift ikonet af forbundet til et bogmærke indsættelse i bogmærket kommentere de korrespondent kode i skarpe beslag\: es [cyan] vil vise cyan ikon. Mulige værdier\: aqua, B, sort, blå, brun, cyan, darkpurple, grøn, idé, lyseblå, lightgreen, orange, pink, lilla, rød, hvid, gulfoxtrick.FoxtrickAlert.desc\= Giver dig en 'knurre' anmeldelse om Hattrick nyheder
+foxtrick.BookmarkAdjust.desc=Skift symbolet som er knyttet til et bogmærke, ved at indsætte den tilsvarende kode imellem tegnet [...] i bogmærke kommentar feltet\: F.eks [cyan] vil vise cyan ikon. Mulige værdier\: aqua, B, sort, blå, brun, cyan, mørke lilla, grøn, idé, lyseblå, lysegrøn, orange, pink, lilla, rød, hvid, gul
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
