--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -162,7 +162,7 @@ foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependi
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado del jugador propio
 foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Agregar iconos especÃ­fico a un evento.
-foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate el coloreado del equipo propio
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separar el coloreado del equipo propio
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 foxtrick.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
@@ -207,7 +207,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Arregla algunos errores de HT con lenguaj
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Añade una barra de desplazamiento dentro del foro. Menos flickering (parpadeo) que la opción de HT
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Aumenta el tamaño de fuente para el formato de HT.
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Quitar el "Vistazo Rápido del foro" de todas las páginas.
-foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Usar automáticamente la altura mínima del calendario para redicir espacio
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Usar automáticamente la altura mínima del calendario para reducir espacio.
 foxtrick.SimplePresentation.desc=Opciones de presentación adicionales.
 foxtrick.SimplePresentation.League_Table.desc=Añade lineas verticales a la tabla de liga para facilitar su lectura.
 foxtrick.SimplePresentation.Guestbook.desc=Aumenta la facilidad de lectura en el libro de visitas.
@@ -244,13 +244,13 @@ foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de lig
 foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
-foxtrick.GoalDifferenceToTables.desc=Agrega una columna adicional para la diferencia de goles en la tabla de promociÃ³n, asÃ­ como en las tablas de liga antiguas
+foxtrick.GoalDifferenceToTables.desc=Agrega una columna adicional para la diferencia de goles en la tabla de promoción, así­ como en las tablas de liga anteriores
 foxtrick.CrossTable.desc=Añade una tabla extra al Calendario de Partidos, donde se presentan todos los resultados de los partidos de la liga, incluyendo una gráfica con las posiciones de la liga
 foxtrick.ElectionTable.desc=Añade porcentajes a la tabla de elecciones (solo se cuentan los votos mostrados, no todos)
 foxtrick.ContextMenuCopy.desc=Añade opciones dentro del menú contextual para copiar ID y/o enlace y contenido en HT-ML
 foxtrick.ContextMenuCopy.Id.desc=Opción para copiar ID
 foxtrick.ContextMenuCopy.Link.desc=Añade una opción para copiar la ubicación de un enlace en HT-ML
-foxtrick.ContextMenuCopy.HtMl.desc=Añade una opción para copiar el contenido selccionado en HT-ML
+foxtrick.ContextMenuCopy.HtMl.desc=Añade una opción para copiar el contenido seleccionado en HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Añade una opción para copiar una tabla en HT-ML
 foxtrick.NewMail.desc=Resalta los correos nuevos recibidos
 foxtrick.NewMail.NotifyMail.desc=Muestra una notificación si es que hay nuevos correos para ti
@@ -335,7 +335,7 @@ foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables
 foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
 foxtrick.LiveAlert.Sound.desc=Aletar también con un sonido
 foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
-foxtrick.NtPeek.desc=Vista previa de los partidos de la Selección Nacional Mayor/U20 en MyHattrick
+foxtrick.NtPeek.desc=Vista previa de los partidos de la Selección Nacional Mayor/U20 en Mi Hattrick
 foxtrick.SeriesFlags.desc=Mostrar banderas de la liga a un lado del enlance al equipo y/o nombre de usurio (imagenes gracias a HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Mostrar en el Libro de visitas
 foxtrick.SeriesFlags.Supporters.desc=Mostrar en la vista de supporters del equipo
