Russian translation update to r8751
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8752 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=ru-RU
-properties.version=r8686
+properties.version=r8751
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -936,9 +936,6 @@ CurrentBidderShort=Текущий лидер торгов
 CurrentBidderShort.abbr=Ли
 
 
-Senior=Взрослые
-Youth=Юноши
-
 team.status.booked=Назаначен товарищеский матч
 ShowFriendlyBooked.ShowFriendlies=Показать назначенные товарищеские матчи
 
@@ -955,6 +952,10 @@ maximum=Максимум
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Идти по ID
+Senior=Взрослые
+Youth=Юноши
+Tournaments=Турниры
+Tournament=Турнир
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Переключить вид таблицы.
