CopyMatchID active for Tournament matches
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8754 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -241,7 +241,7 @@ foxtrick.ExtraShortcuts.No9.desc=Линк иконица за радио - No9.
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
-foxtrick.CopyMatchID.desc=Копира ИД меча када се кликне на иконицу лига/куп/пријатељска на страници мечевa или у архиви мечева. За супортере такође и на страници 'Директно поређење', у табовима 'Последњи мечеви' и 'Историјат'.
+foxtrick.CopyMatchID.desc=Копира ИД меча када се кликне на иконицу лига/куп/пријатељска/бараж/турнир на страници мечевa или у архиви мечева. За супортере такође и на страници 'Директно поређење', у табовима 'Последњи мечеви' и 'Историјат'.
 foxtrick.HeaderFix.desc=Фиксира заглавље и хоризонтални мени, док се остатак странице може скроловати.
 foxtrick.HeaderFix.FixLeft.desc=Фиксира и вертикални подмени при скроловањy.
 foxtrick.CopyRatings.desc=Додаје линкове 'Копирај' на страници извештаја са утакмице, уз помоћ којих можете ископирати оцене у меморију (у стилу ХТ-табеле прилагођене за поруке на форуму).
