*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8770 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -497,10 +497,12 @@ foxtrick.transferfilter.Foxtrick_Filters=Filtros de Foxtrick
 #Filter
 Filters=Filtros
 Filters.filter=Aceptar
+Filters.clear=Limpiar
 Filters.noFilter=Ningún filtro
 Filters.none=Ninguno
 Filters.days=Días
 Filters.stamina=Resistencia
+Filters.Form=Forma
 Filters.XP=Experiencia
 Filters.specialty=Especialidad
 Filters.stars=Estrellas
@@ -579,6 +581,7 @@ categories.R=D
 categories.E1=E1
 categories.E2=E2
 
+match.pos.lcd=Defensor central izquierdo
 match.pos.lw=Extremo izquierdo
 match.pos.rw=Extremo derecho
 match.pos.lf=Delantero izquierdo
@@ -598,6 +601,7 @@ PlayerNumber.abbr=\#
 TSI=TSI
 TSI.abbr=TSI
 
+CanBePromotedIn=Puede ser promocionado en
 
 Personality=Personalidad
 Agreeability=Carácter
