--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -51,6 +51,7 @@ foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long team names on
 foxtrick.SkinPlugin.desc=Adds your own CSS skin to Hattrick
 #ExtraShortcuts
 #CopyMatchID
+foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly/tournament icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league positions
 foxtrick.MovePlayerSelectbox.desc=Moves players select box up on players detail page
 #MoveManagerOnline
