--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -19,7 +19,7 @@
 <item></item>
 <item><xhtml:b>Локализација:</xhtml:b></item>
 <item>Интеграција са <xhtml:a href="http://www.crowdin.net/project/foxtrick">crowdsourcing</xhtml:a> сервисом за превођење . (CatzHoek, Convincedd)</item>
-<item>Велики број ажурираних превода. (Catzhoek и многи други преводиоци. Између осталих: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, Zayc)</item>
+<item>Велики број ажурираних превода. (Catzhoek и многи други преводиоци. Између осталих: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF)</item>
 <item>Хвала свима. Молимо вас да наставите да преводите FoxTrick на <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a></item>
 <item>За више информација погледајте [post=15466991.1] или [post=15466972.1]</item>
 <item></item>
