*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8784 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
 foxtrick.ForumYouthIcons.symbols.desc=Fügt ein Icon für folgende Symbole hinzu. Einträge werden getrennt durch Semikolons. Um ein Semikolon zuzufügen benutze "/;".
 foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
 foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen
+foxtrick.ForumYouthIcons.tournament.desc=Icon für TournamentID zufügen
+foxtrick.ForumYouthIcons.tournament_match.desc=Icon für TournamentMatchID zufügen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Verschachtelte Zitate ab einer gewissen Tiefe als Spoiler anzeigen. Die benötigte Tiefe der Verschachtelung bitte unten angeben.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=unformatierten
 CopyPosting.style.last=letzten
 
 ForumYouthIcons.label=Jugendlinks
+ForumYouthIcons.labelTournament=Turniere
 ForumYouthIcons.labelToolbar=Hauptlinks
 ForumYouthIcons.youthplayerid=Jugendspieler verlinken
 ForumYouthIcons.youthteamid=Jugendteam verlinken
 ForumYouthIcons.youthmatchid=Link zu Jugendspiel einfügen
 ForumYouthIcons.youthseries=Link zu Jugendliga einfügen
+ForumYouthIcons.tournamentid=Link zu Turnier einfügen
+ForumYouthIcons.tournamentmatchid=Link zu Turnierspiel einfügen
 
 ForumOtherIcons.label=Weitere
 ForumOtherIcons.debug=FoxTrick debug log einfügen.
