--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -33,6 +33,8 @@ foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links whe
 foxtrick.ForumYouthIcons.desc=Displays a link bar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask  with additional , eg .).
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
+foxtrick.ForumYouthIcons.tournament.desc=Adds icon for TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Adds icon for TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a spoiler. Specify the level below.
 #EmbedMedia
@@ -113,6 +115,9 @@ foxtrick.TeamStats.FilterFor=Filter for
 
 #Forums
 
+ForumYouthIcons.labelTournament=Tournaments
+ForumYouthIcons.tournamentid=Insert tournament tag.
+ForumYouthIcons.tournamentmatchid=Insert tournament match tag.
 
 
 #special bbcode, not really youth icons
