--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -242,6 +242,7 @@ foxtrick.NewMail.NotifyForum.desc=Muestra una notificación si hay nuevos mensaj
 foxtrick.CopyYouth.desc=Funciones de copiar para informes de juveniles
 foxtrick.CopyYouth.TrainingReport.desc=Informe de entreno
 foxtrick.CopyYouth.ScoutComment.desc=Informe del scout
+foxtrick.CopyYouth.RejectedToHTY.desc=Copiar el comentario del ojeador y abrir la aplicación HT-Youthclub en jugador rechazado
 foxtrick.CopyYouth.PlayerSource.desc=Código fuente del jugador
 foxtrick.CopyYouth.FixturesSource.desc=Código fuente de los resultados
 foxtrick.PlayerBirthday.desc=Muestra el último y el próximo cumpleaños en el resumen del jugador
@@ -353,6 +354,7 @@ foxtrick.MatchSimulator.RatingsBelow.desc=Muestra una predicción a continuació
 foxtrick.MatchSimulator.RatingsRight.desc=Muestra la predicción a la derecha
 foxtrick.Filter.desc=Añadir filtros a la parte superior de la página de jugadores
 foxtrick.RatingsDisplay.desc=Muestra el promedio de puntos en un estilo diferente
+foxtrick.RatingsDisplay.DenominationsRange.desc=En un rango de 0-20
 
 # -----------------------------------------------------------------------------
 
@@ -581,6 +583,9 @@ categories.R=D
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Portero
+match.pos.lb=Defensor lateral izquierdo
+match.pos.lb.abbr=DLI
 match.pos.lcd=Defensor central izquierdo
 match.pos.lw=Extremo izquierdo
 match.pos.rw=Extremo derecho
@@ -681,6 +686,7 @@ JoinedSince.abbr=Desde
 Hotlist=Lista
 Hotlist.abbr=Lista
 
+skilltable.youthplayer=juvenil canterano
 
 #matchdetail
 foxtrick.matchdetail.midfield=Mediocampo
