--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=테이블 아이콘 추가. 정규 표현을
 foxtrick.ForumYouthIcons.symbols.desc=아래 기호 아이콘 추가. 엔트리는 세미콜론으로 구분 됩니다. 세미콜론을 사용하기 위해서 "/;"을 입력하세요.
 foxtrick.ForumYouthIcons.debug.desc=폭스트릭 디버그 로그 아이콘 추가
 foxtrick.ForumYouthIcons.settings.desc=폭스트릭 설정 아이콘 추가
+foxtrick.ForumYouthIcons.tournament.desc=TournamentID에 대한 아이콘 추가
+foxtrick.ForumYouthIcons.tournament_match.desc=TournamentMatchID에 대한 아이콘 추가
 #FormatPostingText
 foxtrick.FormatPostingText.desc=폭스트릭 HT-ML 태그를 HTML 태그로 대체 (예를 들어 'pre' 요소)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=스포일러 안에 중첩 인용문 보기. 아래 레벨 지정.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=raw
 CopyPosting.style.last=last
 
 ForumYouthIcons.label=유스 링크
+ForumYouthIcons.labelTournament=토너먼트
 ForumYouthIcons.labelToolbar=메인 링크
 ForumYouthIcons.youthplayerid=유소년 선수 tag 삽입.
 ForumYouthIcons.youthteamid=유소년 팀 tag 삽입.
 ForumYouthIcons.youthmatchid=유소년 경기 tag 삽입.
 ForumYouthIcons.youthseries=유소년 시리즈 tag 삽입.
+ForumYouthIcons.tournamentid=토너먼트 태그를 삽입합니다.
+ForumYouthIcons.tournamentmatchid=토너먼트 경기 태그를 삽입합니다.
 
 ForumOtherIcons.label=기타
 ForumOtherIcons.debug=폭스트릭 디버그 로그 삽입.
@@ -836,7 +841,7 @@ MatchReportFormat.MatchReport=경기 보고서
 MatchReportFormat.lineup=라인업
 MatchReportFormat.kickOff=경기 시작
 MatchReportFormat.halfTime=하프 타임
-MatchReportFormat.fullTime=경기 종료
+MatchReportFormat.fullTime=풀 타임
 MatchReportFormat.extraTime=연장전
 MatchReportFormat.penaltyShootOut=승부차기
 MatchReportFormat.result=결과
