--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -127,6 +127,7 @@ foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
 foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
 foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
 foxtrick.TeamStats.ActivePlayers.label=Aktīvie spēlētāji
+foxtrick.TeamStats.HomeGrownPlayers.label="Mātes kluba" bonuss
 foxtrick.TeamStats.PurchasedPlayers.label=Nopirktie spēlētāji
 
 #season stats
