--- a/content/locale/lt/release-notes.xml
+++ b/content/locale/lt/release-notes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Translated to r8183-->
+<!-- Translated to r8766-->
 <!-- Notes for localization -->
 <!-- Please keep the overall structure and the tags like <note>, <item>,
      <module> unchanged, and basically translate the text.
@@ -11,6 +11,37 @@
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
 <note version="nightly" localized-version="Development build">
 <item>Peržiūrėkite „Google Code“ <xhtml:a href="http://code.google.com/p/foxtrick/source/list">pakeitimų sąrašą</xhtml:a>.</item>
+</note>
+
+<note version="0.9">
+<item><xhtml:b>Vertimai:</xhtml:b></item>
+<item>Integruotas viešųjų vertimų portalas <xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a>. (CatzHoek, Convincedd)</item>
+<item>Daug vertimų atnaujinimų. (Catzhoek ir daug kitų vertėjų: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF)</item>
+<item>Dėkojame visiems prisidėjusiems. Maloniai prašome tęsti „FoxTrick“ vertimą: <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a></item>
+<item>Informacija vertėjams: [post=15466991.1] ir [post=15466972.1]</item>
+<item></item>
+<item><xhtml:b>Funkcijų paryškinimas</xhtml:b></item>
+<item>Dabar galite lengvai aptikti „Foxtrick“ patobulinimus ir jų modulius. Tiesiog spustelėkite „Foxtrick“ versijos lauką bet kurio puslapio dešiniajame apatiniame kampe. Perkrovus puslapį visų funkcijų modulių pavadinimus rasite užvedę pelės žymeklį ant atitinkamos funkcijos.</item>
+<item></item>
+<item><xhtml:b>Naujienos</xhtml:b></item>
+<item>● <module>MatchReportFormat</module>: visiškai perdaryta rungtynių ataskaita (ryanli, Catzhoek, ljushaff)</item>
+<item>● <module>Ratings</module>: galima paslėpti vidutinius „Hattrick“ reitingus (convinced)</item>
+<item>● <module>Filter</module>: filtrai geriausiųjų žaidėjų puslapyje (convinced)</item>
+<item>● <module>MatchOrder</module>: rungtynių nurodymų puslapyje pateikiama daugiau informacijos bei galima sukeisti kraštus (convinced)</item>
+<item>● <module>MatchSimulator</module>: spėjant reitingus galima atsižvelgti į ištvermės poveikį ir naudoti „<xhtml:a href="http://www.fantamondi.it/HTMS">HTMS</xhtml:a>“ rungtynių simuliatorių (convinced)</item>
+<item>● <module>RatingsDisplay</module>: „Hattrick“ reitingai skirtingu formatu (convinced)</item>
+<item>● <module>LoyaltyDisplay</module>: prideda lojalumo ir kilmės klubo premijas prie įgūdžių stulpelių (Catzhoek)</item>
+<item>● <module>EmbedMedia</module>: forumo žinutėse pateiktas įvairių rinkmenų nuorodas galima iškart peržiūrėti (Catzhoek)</item>
+<item>● <module>HeaderToggle</module>: visas „Hattrick“ puslapio dalis su antrojo lygmens atraštėmis galima pasirinktinai sutraukti (convincedd)</item>
+<item>● <module>Links</module> ir <module>StaffMarker</module> duomenys įkeliami iš <xhtml:a href="http://foxtrick.org">foxtrick.org</xhtml:a>. Taigi, nuo šiol naujausias nuorodas matysite net ir neatnaujinę „FoxTrick“</item>
+<item>● <module>StaffMarker</module>: atnaujintas CHPP licensiją ir redaktoriaus statusą turinčių žmonių sąrašas (Catzhoek)</item>
+<item>● <module>StaffMarker</module>: užvedus pėlės žymeklį ant CHPP logotipo matysite atitinkamos programos pavadinimą (Catzhoek)</item>
+<item>● Nuorodos į rungtynes pritaikytos prie „Hattrick“ atnaujinimų (Catzhoek)</item>
+<item>● LeagueChat ir HeaderFixFlickerFix pašalinti (convincedd)</item>
+<item>● Daug vidinių pokyčių (ryanli, convincedd) ir keletas smulkių pataisymų</item>
+<item></item>
+<item><xhtml:b>„Google Chrome“ vartotojams</xhtml:b></item>
+<item>Pritaikėme „Chrome“ leidimų sistemą. Įdiegiant „Foxtrick“ prašysime mažiau teisių. Kadangi dar nieko nenustatėte. išsaugokite nustatymus ir pažymėkite, ką norite leisti. Jei vėliau įjungsite modulį, kuriam reikia išorinių resursų, reikės ir jam suteikti leidimą.</item>
 </note>
 
 <note version="0.8.2">
